# jobberws

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.rst  version.h
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: install.sh
modules/: FindJansson.cmake  FindMicroHttpd.cmake  FindMySQL.cmake
scripts/: config.json  other.lua  script.lua  test.lua  ws.lua
src/: base64.c  base64.h  crypt_sha256.c  crypt_sha256.h  http.c  version.h.in
